# Niffler

./: .Rhistory  .gitignore  .gitpod.yml  Acknowledgments.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  install.sh  macos_install.sh  pom.xml  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test-pr.yml  test.yml
Niffler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conf/: README.md
conf/extraction-profiles/: featureset.txt  featureset2.txt
conf/keycloak/: kheops_conf.json
docs/: index.md
init/: mongodb-org-4.2.repo  mongoinit.js
modules/: ImageExtractor.py
modules/anonymization/: Anonymize.py  config.json  ignore.txt
modules/app-layer/: README.md  Strip.py  config.json  pom.xml  properties.txt  sample.csv
modules/cold-extraction/: ColdDataRetriever.py  Dockerfile  PickleReader.py  README.md  SplitCSV.py  TestConnection.py  book1.csv  checkCSV.py  concurrent-system.json  config.json  description.csv.xsl  detailed.csv.xsl  docker-compose.yml  requirements.txt  stid.csv.xsl  system.json
modules/dicom-anonymization/: DicomAnonymizer.py  DicomAnonymizer2.py  README.md
modules/frontend/: README.md  __init__.py  db.sqlite  models.py  requirements.txt  server.py
modules/meta-extraction/: Dockerfile  MetadataExtractor.py  README.md  docker-compose.yml  requirements.txt
modules/nifti-extraction/: README.md  (+2 more)
scripts/: README.md  scanner_util.js  stid.csv.xsl  unique_scanners.js
tests/: README.md  conftest.py
(+147 files in other folders)
