[metadata]
name = Niffler
version = 0.9.3
author = Soham Mulye
author_email = mulyesoham@gmail.com
description = Niffler: A DICOM Framework for Machine Learning and Processing Pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Emory-HITI/Niffler
project_urls =
    Bug Tracker = https://github.com/Emory-HITI/Niffler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =  requests
                    pymongo
                    schedule
                    pydicom
                    pynetdicom
                    image
                    numpy
                    pandas
                    pillow
                    pypng

[options.extras_require]
dev =   pytest
        pytest-mock
        pytest-cov
        tqdm
        pycryptodomex
        SQLAlchemy

[options.package_data]
modules=*
docs=*
init=*
tests=*